Binary PostScript images in ConvertType
When the final image is a binary image (only has 0 or 255 values in
when coming into eps.c) then the image will be saved as a binary (one
bit per pixel) image, not an 8-bit image that is the default.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-02-17  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/convertt/eps.c: Functions for binary image added.
+
+	* lib/fitsarrayvv.c (nameisfits): Check length.
+
+	* doc/gnuastro.texi (Internal libraries): Removed details of
+	libraries.
+
+	* README: Details removed.
+
 2015-02-16  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* lib/statistics.c (dminmax): Works with NAN values too.
