Installation problems fixed
When checking for CFITSIO, the dependencies were not included, so on
some operating systems the installation would fail. This issue is
fixed now.

All the libraries are now created using convenience libraires with
Libtool (instead of the simple static libraries of before).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-02-18  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* lib/Makefile.am: Changed all static libraries to libtool static
+	libraries.
+
+	* doc/gnuastro.texi: Updated.
+
+	* configure.ac: Added Libtool checks. Corrected cfitsio and wcslib
+	dependencies and removed FFTW as a dependency.
+
 2015-02-17  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/convertt/eps.c: Functions for binary image added.
